syntax = "proto3";

package product.v1;

option go_package = "github.com/yourusername/my-app/backend/gen/product/v1;productv1";

service ProductService {
  rpc GetProduct(GetProductRequest) returns (Product) {}
  rpc GetStockStatus(GetStockStatusRequest) returns (StockStatus) {}
}

message GetProductRequest {
  string product_id = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message GetStockStatusRequest {
  string product_id = 1;
}

message StockStatus {
  bool in_stock = 1;
  int32 quantity = 2;
}